# billion_row_challenge

./: .gitignore  LICENSE  README.md  README.v1.md  basic  run_all.sh  run_c#.sh  run_cpp.sh  run_d.sh  run_dart.sh  run_erlang.sh  run_go.sh  run_graalvm.sh  run_haskell.sh  run_java.sh  run_javascript.sh  run_julia.sh  run_kotlin.sh  run_lisp.sh  run_lua.sh  run_node.sh  run_nodejs.sh  run_ocaml.sh  run_pascal.sh  run_perl.sh  run_php.sh  run_python.sh  run_r.sh  run_ruby.sh  run_rust.sh  run_scheme.sh  run_swift.sh  run_zig.sh  rust-kilt97-1.sh  setup.sh  setup_docker.sh  setup_gccgo.sh  test_lisp_1k.txt
c#/: run_basic.sh  run_rudty.sh
cobol/: run_basic.sh
cpp/: common.h  run_basic.sh  run_basic_with_clang.sh  run_libertyrapid.sh  run_libertyrapid1.sh  run_libertyrapid2.sh
csharp/: run_basic.sh  run_basic_with_aot.sh  run_rudty1.sh
d/: run_basic.sh
dart/: run_basic.sh  run_basic_with_aot.sh
erlang/: run_basic.sh
fortran/: run_basic.sh
go/: go.mod  run_basic.sh  run_lemon-mint1.sh  run_lemon-mint2.sh  run_lemon-mint3.sh
handler/: Cargo.toml
haskell/: run_basic.sh
haskell/basic/: CHANGELOG.md  LICENSE  Main.hs  basic-code.cabal  basic.cabal  cabal.project  main.hs
haskell/basic/app/: Main.hs
java/: run_basic_g1gc.sh  run_basic_graalvm.sh  run_basic_parellel.sh  run_basic_zgc.sh
javascript/: common.js  package-lock.json  run_basic.sh  run_basic_with_bun.sh  run_kimseongjee.sh  run_prravda1.sh  run_sunrabbit1.sh  run_sunrabbit2.sh
julia/: run_basic.sh
kotlin/: run_basic_jvm.sh  run_basic_native.sh
lisp/: run_basic.sh
lua/: run_basic.sh
nodejs/: basic.js  package.json  run_basic.sh  run_prravda.sh  run_prravda1.sh  run_sunrabbit.sh  run_sunrabbit1.sh  run_sunrabbit2.sh
ocaml/: run_basic.sh
pascal/: README.md  run_basic.sh
perl/: run_basic.sh
php/: basic.php  common.php  rio.php  run_basic.sh  run_rio.sh
python/: basic.py  common.py  hmluck83.py  myyrakle1.py  run_basic.sh  run_basic_with_pypy.sh  run_hmluck83.sh  run_myyrakle1.sh  run_statpan-mp.sh  statpan-mp.py
r/: run_basic.sh
ruby/: basic.rb  common.rb  run_basic.sh
rust/s576air-1/: Cargo.toml
rust/whitetac/: Cargo.toml  hash.py
rust/whitetac2/: Cargo.toml
rust/whitetac2/src/: main.rs
(+89 files in other folders)
