[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.16.0"
memmap2 = "0.9.4"
rayon = "1.10.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "none"