[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intmap = "2.0.0"
memmap2 = "0.9.4"
num_cpus = "1.16.0"
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10.0"
rustc-hash = "1.1.0"
trie-rs = "0.2.0"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "debuginfo"
